--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -7,29 +7,28 @@
 .navigation .btn.btn-pill {
   font-family: 'Press Start 2P', cursive;
   font-size: 0.7em;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .nav .btn.btn-pill {
   font-family: 'Press Start 2P', cursive;
   font-size: 0.7em;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .navigation .btn.btn-pill:before {
-  padding-right: 2px;
+  padding-right: 0px;
 }
 
 .navigation .btn.btn-success.btn-pill span {
-  padding-left: 5px;
+  padding-left: 0px;
 }
 
-a > span.icon-nav.fas.fa-2x {
-  padding-right: 7px;
+.navigation .btn.btn-pill:hover, .nav .btn.btn-pill:hover {
+  background-color: #17b06b;
+  color: #000000;
 }
 
-a > span.icon-nav.fab.fa-2x {
-  padding-right: 7px;
-}
-
-a > svg.icon-nav.fab.fa-2x {
-  padding-right: 5px;
+.icon-nav {
+  margin-right: 10px;
 }
